@@ -33,6 +33,11 @@
 #include <string>
 #include <climits>
 
+// Adding this for compilers that don't define NAN by default
+#ifndef NAN
+#define NAN (0.0/0.0)
+#endif
+
 
 FASTJET_BEGIN_NAMESPACE      // defined in fastjet/internal/base.hh
 
