@@ -1,3 +1,6 @@
+2014-4-29 <JDT>
+   Added manual definition of NAN for compilers that don't have it.
+   Removed a few more unused parameters for compilation
 2014-4-22 <JDT>
    Turned on -Wunused-parameter compiler flag to fix ATLAS compile issues.
 2014-4-18 <JDT>
